less hideous video popup, thanks to prettyPhoto

--- a/client-io.html
+++ b/client-io.html
@@ -8,6 +8,7 @@
 	<script>window.jQuery || document.write('<script src="/public/js/jquery-1.5.2.min.js">\x3C/script>')</script>
 	<script src="/public/js/jquery.cookie.js"></script>
     <script src="/public/js/underscore-min.js"></script>
+    <script src="/public/js/jquery.prettyPhoto.js"></script>
     <!script src="/socket.io/socket.io.js"><!/script>
     <script src="/socket.io/support/socket.io-client/socket.io.js"></script>
     <script src="/client-io.js"></script>
@@ -16,9 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/client-io.css">
 	<link REL="SHORTCUT ICON" HREF="/public/favicon.ico">
 	
-	<script type="text/javascript" src="/thickbox.js"></script>
-	<link rel="stylesheet" href="/thickbox.css" type="text/css" media="screen" />
-
+	<link rel="stylesheet" href="/public/css/prettyPhoto.css" type="text/css" media="screen" />
 	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
@@ -40,16 +39,8 @@
 		</a>
     <div class="help">
         <img src="/public/bubblepurpleio.png" width="50"> <span>http://chats.io<em>/<script>document.write (room);</script></em></span> ... or any chatroom name | 
-         <a href="#TB_inline?height=550&width=900&inlineId=hiddenVideoContent&modal=true" class="thickbox">Watch our video!</a>
+        <a href="http://www.youtube.com/watch?v=XAH2L6GAzGg" rel="prettyPhoto" title="">Watch our video!</a>
     </div>
-
-		<div id="hiddenVideoContent" style="display:none;"> 
-			<p align="right"><a href="#" onclick="tb_remove()">close</a></p>
-		 	<p>
-<iframe title="YouTube video player" width="853" height="510" src="http://www.youtube.com/embed/XAH2L6GAzGg?rel=0&amp;hd=1" frameborder="0" allowfullscreen></iframe>
-			</p>
-		</div>
-
 	
 	
     <audio id="audio_new_pm" src="/audio/new_pm.mp3" preload="auto"></audio>
